--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -76,11 +76,32 @@
         android:paddingVertical="12dp"
         android:text="@string/signup" />
 
-    <TextView
+
+    <LinearLayout
         android:id="@+id/already_have_account_tv"
-        android:text="@string/already_have_an_account_signin"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/already_have_an_account_signin"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/signUpTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:text="@string/signin"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:layout_marginLeft="8dp" />
+
+    </LinearLayout>
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_gravity="center"
